fixing homepage hero issue on mobile

--- a/app/assets/scss/modules/_hero.scss
+++ b/app/assets/scss/modules/_hero.scss
@@ -1,7 +1,6 @@
 .hero {
 	width: 100%;
 	max-width: 1440px;
-	padding: 40px 0 80px;
 	margin: 0 auto;
 	background-size: cover;
 	background-position: 50% 50%;
@@ -18,6 +17,7 @@
 	&__banner {
 		max-width: 500px;
 		padding: 20px 20px 8px;
+		margin: 40px auto 80px 0;
 		font-size: 16px;
 		background: $md-primary;
 		color: $md-primary-text;
